--- a/loginPage/login.css
+++ b/loginPage/login.css
@@ -47,9 +47,12 @@
     display: flex;
     justify-content: space-between;
 }
+.etc>div{
+    display: flex;
+}
 .joinButton>p,
 .findMineButton>p{
-    display: inline;
+    margin: 0;
     font-size: 12px;
     color:#767676;
 }
